@@ -1,3 +1,7 @@
+*2007/02/14
+ - Fixed bug
+  -- seedit-converter did not work when "//" is included in path
+
 *2007/02/05
 - Fixed installhelper-include.sh for asianux 2
 - Add seedit-load.conf to customize obj_type filed of audit
